substrate/frame/support/test/tests/benchmark_ui/bad_return_non_unit_t.stderr
error: expected `()`
  --> tests/benchmark_ui/bad_return_non_unit_t.rs:25:23
   |
25 |     fn bench() -> Result<u32, BenchmarkError> {
   |                          ^^^
